# auth-lib

./: README.md  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
src/auth_lib/: __init__.py  auth.py  schemas.py
tests/: conftest.py  test_auth_module.py
